1.添加token 计费 2.TODO : 添加动态提示词